--- a/env/env.yaml
+++ b/env/env.yaml
@@ -2,4 +2,4 @@ sensitive:
   user:
     username: Lerngruppe2
     password: Sup3rS4f3P4$$w0rd
-    email: <EMAIL>
+    email: dominik.hahn@opitz-consulting.com
